cabal-version:          3.0
name:                   miso-router
version:                0.1

executable app
  hs-source-dirs:       src
  main-is:              Main.hs
  build-depends:        base, miso, servant
  default-language:     GHC2021
  ghc-options:          -Wall -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start" -ddump-splices
  cpp-options:          -DWASM
  default-extensions:   CPP TemplateHaskell
 
