cabal-version:          3.0
name:                   miso-router
version:                0.1

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

executable app
  hs-source-dirs:
    src
  main-is:
    Main.hs
  build-depends:
    base, miso, servant
  default-language:
    GHC2021
  default-extensions:
    CPP TemplateHaskell
